add new notebooks

--- a/notebooks/amazon-google-all-reduced.ipynb
+++ b/notebooks/amazon-google-all-reduced.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:27:05.703013Z",
@@ -575,29 +575,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
      "start_time": "2018-04-02T18:22:22.342575Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y_test_pred = model.predict(X_test, batch_size= 8192)[:,1]\n",
-    "y_test_ = data['test_y'].values.squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T18:22:24.522707Z",
-     "start_time": "2018-04-02T18:22:24.480499Z"
-    },
-    "scrolled": true
+    }
    },
    "outputs": [
     {
@@ -606,10 +589,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.87      0.82      0.85       117\n",
+      "          0    0.99839   0.99892   0.99866     13013\n",
+      "          1    0.87273   0.82051   0.84581       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99727   0.99733   0.99729     13130\n",
       "\n",
       "[[12999    14]\n",
       " [   21    96]]\n"
@@ -617,7 +600,10 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "model.load_weights('../data/models/amazon-google-all-reduced')\n",
+    "y_test_pred = model.predict(X_test, batch_size= 8192)[:,1]\n",
+    "y_test_ = data['test_y'].values.squeeze()\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
