--- a/notebooks/amazon-google-base-1-full.ipynb
+++ b/notebooks/amazon-google-base-1-full.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:43:55.034021Z",
@@ -14,6 +14,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/paperspace/anaconda3/envs/python-36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -61,13 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:46:54.372653Z",
      "start_time": "2018-04-02T18:46:36.992171Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:44:30.159566Z",
@@ -111,9 +112,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /Users/derekzhao/anaconda3/envs/entity-resolution/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3148: calling l2_normalize (from tensorflow.python.ops.nn_impl) with dim is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "dim is deprecated, use axis instead\n",
       "Number of inputs to dense layer: 2\n"
      ]
     }
@@ -573,27 +571,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:46:25.186714Z",
      "start_time": "2018-04-02T18:46:23.530070Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y_test_pred = model.predict(X_test)[:,1]\n",
-    "y_test_ = data['test_y'].values.squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T18:46:25.680968Z",
-     "start_time": "2018-04-02T18:46:25.639609Z"
     }
    },
    "outputs": [
@@ -603,18 +585,21 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.99      1.00      1.00     12865\n",
-      "          1       0.82      0.51      0.63       135\n",
+      "          0    0.99512   0.99883   0.99697     12865\n",
+      "          1    0.82759   0.53333   0.64865       135\n",
       "\n",
-      "avg / total       0.99      0.99      0.99     13000\n",
+      "avg / total    0.99338   0.99400   0.99336     13000\n",
       "\n",
       "[[12850    15]\n",
-      " [   66    69]]\n"
+      " [   63    72]]\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "model.load_weights('../data/models/amazon-google-base-1-full')\n",
+    "y_test_pred = model.predict(X_test)[:,1]\n",
+    "y_test_ = data['test_y'].values.squeeze()\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
@@ -630,9 +615,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "entity-resolution",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "entity-resolution"
+   "name": "python-36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -644,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "varInspector": {
    "cols": {
