--- a/notebooks/amazon-google-base-1-num-null.ipynb
+++ b/notebooks/amazon-google-base-1-num-null.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:00:14.991816Z",
@@ -14,6 +14,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/paperspace/anaconda3/envs/python-36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -61,13 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:00:31.886714Z",
      "start_time": "2018-04-02T19:00:15.008584Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:00:37.475892Z",
@@ -111,9 +112,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /Users/derekzhao/anaconda3/envs/entity-resolution/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3148: calling l2_normalize (from tensorflow.python.ops.nn_impl) with dim is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "dim is deprecated, use axis instead\n",
       "Number of inputs to dense layer: 11\n"
      ]
     }
@@ -565,27 +563,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:06:30.907378Z",
      "start_time": "2018-04-02T19:06:29.683879Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y_test_pred = model.predict(X_test)[:,1]\n",
-    "y_test_ = data['test_y'].values.squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T19:06:31.545401Z",
-     "start_time": "2018-04-02T19:06:31.503372Z"
     }
    },
    "outputs": [
@@ -595,10 +577,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.78      0.67      0.72       117\n",
+      "          0    0.99701   0.99831   0.99766     13013\n",
+      "          1    0.78000   0.66667   0.71889       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99507   0.99535   0.99517     13130\n",
       "\n",
       "[[12991    22]\n",
       " [   39    78]]\n"
@@ -606,25 +588,19 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "model.load_weights('../data/models/amazon-google-base-1-num-null')\n",
+    "y_test_pred = model.predict(X_test)[:,1]\n",
+    "y_test_ = data['test_y'].values.squeeze()\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "entity-resolution",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "entity-resolution"
+   "name": "python-36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -636,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "varInspector": {
    "cols": {
