--- a/notebooks/amazon-google-base-1t-num-null.ipynb
+++ b/notebooks/amazon-google-base-1t-num-null.ipynb
@@ -567,30 +567,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T18:16:53.474485Z",
-     "start_time": "2018-04-02T18:16:52.170741Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y_test_pred = model.predict(X_test)[:,1]\n",
-    "y_test_ = data['test_y'].values.squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T18:16:54.494111Z",
-     "start_time": "2018-04-02T18:16:54.443072Z"
-    },
-    "scrolled": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -598,10 +576,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.87      0.92      0.90       117\n",
+      "          0    0.99931   0.99877   0.99904     13013\n",
+      "          1    0.87097   0.92308   0.89627       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99816   0.99810   0.99812     13130\n",
       "\n",
       "[[12997    16]\n",
       " [    9   108]]\n"
@@ -609,7 +587,10 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "model.load_weights('../data/models/amazon-google-base-1t-num-null')\n",
+    "y_test_pred = model.predict(X_test)[:,1]\n",
+    "y_test_ = data['test_y'].values.squeeze()\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
