--- a/notebooks/amazon-google-base-1t-num.ipynb
+++ b/notebooks/amazon-google-base-1t-num.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:26:37.709751Z",
      "start_time": "2018-04-02T19:26:37.674553Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/paperspace/anaconda3/envs/python-36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:27:01.463846Z",
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:27:05.703013Z",
@@ -557,29 +567,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:16:53.474485Z",
      "start_time": "2018-04-02T18:16:52.170741Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y_test_pred = model.predict(X_test)[:,1]\n",
-    "y_test_ = data['test_y'].values.squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T18:16:54.494111Z",
-     "start_time": "2018-04-02T18:16:54.443072Z"
-    },
-    "scrolled": true
+    }
    },
    "outputs": [
     {
@@ -588,10 +581,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.88      0.90      0.89       117\n",
+      "          0    0.99908   0.99892   0.99900     13013\n",
+      "          1    0.88235   0.89744   0.88983       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99804   0.99802   0.99803     13130\n",
       "\n",
       "[[12999    14]\n",
       " [   12   105]]\n"
@@ -599,7 +592,10 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "model.load_weights('../data/models/amazon-google-base-1t-num')\n",
+    "y_test_pred = model.predict(X_test)[:,1]\n",
+    "y_test_ = data['test_y'].values.squeeze()\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   }
