--- a/notebooks/amazon-google-base-1t.ipynb
+++ b/notebooks/amazon-google-base-1t.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:16:53.474485Z",
@@ -575,13 +575,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-1t')\n",
     "y_test_pred = model.predict(X_test)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:16:54.494111Z",
@@ -595,10 +596,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.90      0.84      0.87       117\n",
+      "          0    0.99854   0.99915   0.99885     13013\n",
+      "          1    0.89908   0.83761   0.86726       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99765   0.99772   0.99768     13130\n",
       "\n",
       "[[13002    11]\n",
       " [   19    98]]\n"
@@ -606,7 +607,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
