--- a/notebooks/amazon-google-base-2-allsim.ipynb
+++ b/notebooks/amazon-google-base-2-allsim.ipynb
@@ -68,7 +68,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-02T18:26:28.128122Z",
      "start_time": "2018-04-02T18:26:11.594689Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:26:48.504280Z",
@@ -565,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:40:13.742742Z",
@@ -575,13 +576,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-2-allsim')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:40:14.371680Z",
@@ -595,10 +597,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.81      0.74      0.78       117\n",
+      "          0    0.99770   0.99846   0.99808     13013\n",
+      "          1    0.81308   0.74359   0.77679       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99605   0.99619   0.99611     13130\n",
       "\n",
       "[[12993    20]\n",
       " [   30    87]]\n"
@@ -606,7 +608,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
