--- a/notebooks/amazon-google-base-2-full.ipynb
+++ b/notebooks/amazon-google-base-2-full.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:27:05.703013Z",
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
@@ -589,13 +589,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-2-full')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:24.522707Z",
@@ -609,10 +610,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     12865\n",
-      "          1       0.85      0.75      0.80       135\n",
+      "          0    0.99736   0.99860   0.99798     12865\n",
+      "          1    0.84874   0.74815   0.79528       135\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13000\n",
+      "avg / total    0.99582   0.99600   0.99588     13000\n",
       "\n",
       "[[12847    18]\n",
       " [   34   101]]\n"
@@ -620,7 +621,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
