--- a/notebooks/amazon-google-base-2.ipynb
+++ b/notebooks/amazon-google-base-2.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:27:05.703013Z",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
@@ -650,13 +650,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-2')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:24.522707Z",
@@ -670,10 +671,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.89      0.74      0.81       117\n",
+      "          0    0.99770   0.99915   0.99843     13013\n",
+      "          1    0.88776   0.74359   0.80930       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99672   0.99688   0.99674     13130\n",
       "\n",
       "[[13002    11]\n",
       " [   30    87]]\n"
@@ -681,7 +682,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
