--- a/notebooks/amazon-google-base-2t.ipynb
+++ b/notebooks/amazon-google-base-2t.ipynb
@@ -245,7 +245,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
      "start_time": "2018-04-02T18:22:22.342575Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -574,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
@@ -584,13 +585,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-2t')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:24.522707Z",
@@ -604,10 +606,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.89      0.76      0.82       117\n",
+      "          0    0.99785   0.99915   0.99850     13013\n",
+      "          1    0.89000   0.76068   0.82028       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99689   0.99703   0.99691     13130\n",
       "\n",
       "[[13002    11]\n",
       " [   28    89]]\n"
@@ -615,7 +617,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
