--- a/notebooks/amazon-google-base-allcomp-allsim.ipynb
+++ b/notebooks/amazon-google-base-allcomp-allsim.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:26:48.504280Z",
@@ -567,16 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T18:40:13.742742Z",
-     "start_time": "2018-04-02T18:40:12.341265Z"
-    },
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-allcomp-allsim')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
