--- a/notebooks/amazon-google-base-allcomp.ipynb
+++ b/notebooks/amazon-google-base-allcomp.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:27:05.703013Z",
@@ -571,23 +571,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
      "start_time": "2018-04-02T18:22:22.342575Z"
-    },
-    "collapsed": true
+    }
    },
    "outputs": [],
    "source": [
-    "y_test_pred = model.predict(X_test)[:,1]\n",
+    "model.load_weights('../data/models/amazon-google-base-allcomp')\n",
+    "y_test_pred = model.predict(X_test, batch_size=2048)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:24.522707Z",
@@ -602,10 +602,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.86      0.82      0.84       117\n",
+      "          0    0.99839   0.99877   0.99858     13013\n",
+      "          1    0.85714   0.82051   0.83843       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99713   0.99718   0.99715     13130\n",
       "\n",
       "[[12997    16]\n",
       " [   21    96]]\n"
@@ -613,9 +613,18 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
