--- a/notebooks/amazon-google-base-idf.ipynb
+++ b/notebooks/amazon-google-base-idf.ipynb
@@ -2,22 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-07T18:50:45.360307Z",
      "start_time": "2018-04-07T18:50:42.866693Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -61,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-07T18:51:15.913074Z",
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-07T18:51:20.637391Z",
@@ -111,9 +103,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /Users/derekzhao/anaconda3/envs/entity-resolution/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3148: calling l2_normalize (from tensorflow.python.ops.nn_impl) with dim is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "dim is deprecated, use axis instead\n",
       "Number of inputs to dense layer: 2\n"
      ]
     }
@@ -565,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-07T18:57:27.315332Z",
@@ -575,13 +564,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-idf')\n",
     "y_test_pred = model.predict(X_test)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-07T18:57:20.936934Z",
@@ -595,10 +585,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.78      0.68      0.73       117\n",
+      "          0    0.99716   0.99831   0.99773     13013\n",
+      "          1    0.78431   0.68376   0.73059       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99526   0.99551   0.99535     13130\n",
       "\n",
       "[[12991    22]\n",
       " [   37    80]]\n"
@@ -606,7 +596,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
@@ -622,9 +612,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "entity-resolution",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "entity-resolution"
+   "name": "python-36"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   },
   "varInspector": {
    "cols": {
