--- a/notebooks/amazon-walmart-all-full.ipynb
+++ b/notebooks/amazon-walmart-all-full.ipynb
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -812,10 +812,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11540\n",
-      "          1       0.83      0.94      0.88       115\n",
+      "          0    0.99939   0.99809   0.99874     11540\n",
+      "          1    0.83077   0.93913   0.88163       115\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99773   0.99751   0.99759     11655\n",
       "\n",
       "[[11518    22]\n",
       " [    7   108]]\n"
@@ -823,11 +823,21 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-all-full')\n",
     "y_test_pred = model.predict(X_test, batch_size=2048)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
