--- a/notebooks/amazon-walmart-base-1t-num-null-allsim.ipynb
+++ b/notebooks/amazon-walmart-base-1t-num-null-allsim.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:41:28.691606Z",
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -595,10 +595,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.89      0.86      0.88       114\n",
+      "          0    0.99861   0.99896   0.99879     11541\n",
+      "          1    0.89091   0.85965   0.87500       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99756   0.99760   0.99758     11655\n",
       "\n",
       "[[11529    12]\n",
       " [   16    98]]\n"
@@ -606,20 +606,12 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-1t-num-null-allsim')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
