--- a/notebooks/amazon-walmart-base-1t-num-null.ipynb
+++ b/notebooks/amazon-walmart-base-1t-num-null.ipynb
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -602,10 +602,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.88      0.89      0.88       114\n",
+      "          0    0.99887   0.99879   0.99883     11541\n",
+      "          1    0.87826   0.88596   0.88210       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99769   0.99768   0.99769     11655\n",
       "\n",
       "[[11527    14]\n",
       " [   13   101]]\n"
@@ -613,9 +613,10 @@
     }
    ],
    "source": [
-    "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
+    "model.load_weights('../data/models/amazon-walmart-base-1t-num-null')\n",
+    "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
