--- a/notebooks/amazon-walmart-base-1t.ipynb
+++ b/notebooks/amazon-walmart-base-1t.ipynb
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -599,10 +599,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.88      0.87      0.88       114\n",
+      "          0    0.99870   0.99887   0.99879     11541\n",
+      "          1    0.88393   0.86842   0.87611       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99758   0.99760   0.99759     11655\n",
       "\n",
       "[[11528    13]\n",
       " [   15    99]]\n"
@@ -610,20 +610,12 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-1t')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
