--- a/notebooks/amazon-walmart-base-2-full.ipynb
+++ b/notebooks/amazon-walmart-base-2-full.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:41:12.001384Z",
@@ -100,22 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:41:28.691606Z",
      "start_time": "2018-04-12T21:41:20.426588Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of inputs to dense layer: 162\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "histories = dict(acc=list(), val_acc=list(), loss=list(), val_loss=list())\n",
     "model, X_train, X_val, X_test, y_train, y_val, y_test = \\\n",
@@ -822,6 +814,7 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-2-full')\n",
     "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
     "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
