--- a/notebooks/amazon-walmart-base-2.ipynb
+++ b/notebooks/amazon-walmart-base-2.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:41:28.691606Z",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -762,10 +762,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.99      0.75      0.86       114\n",
+      "          0    0.99758   0.99991   0.99875     11541\n",
+      "          1    0.98851   0.75439   0.85572       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99749   0.99751   0.99735     11655\n",
       "\n",
       "[[11540     1]\n",
       " [   28    86]]\n"
@@ -773,9 +773,10 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-2')\n",
     "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
