--- a/notebooks/amazon-walmart-base-2t.ipynb
+++ b/notebooks/amazon-walmart-base-2t.ipynb
@@ -570,7 +570,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:21.415206Z",
      "start_time": "2018-04-12T21:51:21.050809Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -601,10 +602,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.78      0.86      0.82       114\n",
+      "          0    0.99861   0.99766   0.99814     11541\n",
+      "          1    0.78400   0.85965   0.82008       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99651   0.99631   0.99639     11655\n",
       "\n",
       "[[11514    27]\n",
       " [   16    98]]\n"
@@ -612,9 +613,10 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-2t')\n",
     "y_test_pred = model.predict(X_test, batch_size=1024)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
