--- a/notebooks/amazon-walmart-base-allcomp-allsim.ipynb
+++ b/notebooks/amazon-walmart-base-allcomp-allsim.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T19:27:23.665689Z",
      "start_time": "2018-04-12T19:27:20.582747Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/paperspace/anaconda3/envs/python-36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:41:12.001384Z",
@@ -90,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:41:28.691606Z",
@@ -787,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -801,10 +811,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.91      0.84      0.88       114\n",
+      "          0    0.99844   0.99922   0.99883     11541\n",
+      "          1    0.91429   0.84211   0.87671       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99762   0.99768   0.99764     11655\n",
       "\n",
       "[[11532     9]\n",
       " [   18    96]]\n"
@@ -812,20 +822,12 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-allcomp-allsim')\n",
     "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
