--- a/notebooks/amazon-walmart-base-t-allcomp-allsim.ipynb
+++ b/notebooks/amazon-walmart-base-t-allcomp-allsim.ipynb
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -812,10 +812,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.87      0.87      0.87       114\n",
+      "          0    0.99870   0.99870   0.99870     11541\n",
+      "          1    0.86842   0.86842   0.86842       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99743   0.99743   0.99743     11655\n",
       "\n",
       "[[11526    15]\n",
       " [   15    99]]\n"
@@ -823,20 +823,12 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-t-allcomp-allsim')\n",
     "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
