--- a/notebooks/amazon-google-all-full.ipynb
+++ b/notebooks/amazon-google-all-full.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:27:01.463846Z",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T19:27:05.703013Z",
@@ -575,29 +575,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
      "start_time": "2018-04-02T18:22:22.342575Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "y_test_pred = model.predict(X_test, batch_size= 8192)[:,1]\n",
-    "y_test_ = data['test_y'].values.squeeze()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T18:22:24.522707Z",
-     "start_time": "2018-04-02T18:22:24.480499Z"
-    },
-    "scrolled": true
+    }
    },
    "outputs": [
     {
@@ -606,10 +589,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     12865\n",
-      "          1       0.84      0.80      0.82       135\n",
+      "          0    0.99790   0.99837   0.99813     12865\n",
+      "          1    0.83721   0.80000   0.81818       135\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13000\n",
+      "avg / total    0.99623   0.99631   0.99627     13000\n",
       "\n",
       "[[12844    21]\n",
       " [   27   108]]\n"
@@ -617,18 +600,12 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "model.load_weights('../data/models/amazon-google-all-full')\n",
+    "y_test_pred = model.predict(X_test, batch_size= 8192)[:,1]\n",
+    "y_test_ = data['test_y'].values.squeeze()\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
