--- a/notebooks/amazon-google-base-2-num-null.ipynb
+++ b/notebooks/amazon-google-base-2-num-null.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
@@ -585,13 +585,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-2-num-null')\n",
     "y_test_pred = model.predict(X_test, batch_size= 8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:24.522707Z",
@@ -606,10 +607,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.85      0.83      0.84       117\n",
+      "          0    0.99846   0.99869   0.99858     13013\n",
+      "          1    0.85088   0.82906   0.83983       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99715   0.99718   0.99716     13130\n",
       "\n",
       "[[12996    17]\n",
       " [   20    97]]\n"
@@ -617,7 +618,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
