--- a/notebooks/amazon-google-base-2-num.ipynb
+++ b/notebooks/amazon-google-base-2-num.ipynb
@@ -253,7 +253,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
      "start_time": "2018-04-02T18:22:22.342575Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -582,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:23.617361Z",
@@ -592,13 +593,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-2-num')\n",
     "y_test_pred = model.predict(X_test, batch_size= 8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:22:24.522707Z",
@@ -613,10 +615,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     13013\n",
-      "          1       0.79      0.83      0.81       117\n",
+      "          0    0.99846   0.99800   0.99823     13013\n",
+      "          1    0.78862   0.82906   0.80833       117\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     13130\n",
+      "avg / total    0.99659   0.99650   0.99654     13130\n",
       "\n",
       "[[12987    26]\n",
       " [   20    97]]\n"
@@ -624,7 +626,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
