--- a/notebooks/amazon-google-base-t-allcomp-allsim.ipynb
+++ b/notebooks/amazon-google-base-t-allcomp-allsim.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-02T18:26:48.504280Z",
@@ -571,16 +571,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-02T18:40:13.742742Z",
-     "start_time": "2018-04-02T18:40:12.341265Z"
-    },
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-google-base-t-allcomp-allsim')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
@@ -612,7 +609,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
