--- a/notebooks/amazon-walmart-all-reduced.ipynb
+++ b/notebooks/amazon-walmart-all-reduced.ipynb
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -812,10 +812,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.85      0.91      0.88       114\n",
+      "          0    0.99913   0.99844   0.99879     11541\n",
+      "          1    0.85246   0.91228   0.88136       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99770   0.99760   0.99764     11655\n",
       "\n",
       "[[11523    18]\n",
       " [   10   104]]\n"
@@ -823,11 +823,21 @@
     }
    ],
    "source": [
-    "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
+    "model.load_weights('../data/models/amazon-walmart-all-reduced')\n",
+    "y_test_pred = model.predict(X_test, batch_size=1024)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
