--- a/notebooks/amazon-walmart-base-1-allsim.ipynb
+++ b/notebooks/amazon-walmart-base-1-allsim.ipynb
@@ -14,6 +14,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/paperspace/anaconda3/envs/python-36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T22:12:29.419136Z",
@@ -793,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T22:19:27.465518Z",
@@ -803,13 +805,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-1-allsim')\n",
     "y_test_pred = model.predict(X_test)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T22:19:29.048516Z",
@@ -823,10 +826,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.83      0.82      0.83       114\n",
+      "          0    0.99827   0.99835   0.99831     11541\n",
+      "          1    0.83186   0.82456   0.82819       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99664   0.99665   0.99665     11655\n",
       "\n",
       "[[11522    19]\n",
       " [   20    94]]\n"
@@ -834,7 +837,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
@@ -850,9 +853,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "entity-resolution",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "entity-resolution"
+   "name": "python-36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -864,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "varInspector": {
    "cols": {
