--- a/notebooks/amazon-walmart-base-1t-num.ipynb
+++ b/notebooks/amazon-walmart-base-1t-num.ipynb
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -602,10 +602,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.94      0.88      0.91       114\n",
+      "          0    0.99879   0.99948   0.99913     11541\n",
+      "          1    0.94340   0.87719   0.90909       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99825   0.99828   0.99825     11655\n",
       "\n",
       "[[11535     6]\n",
       " [   14   100]]\n"
@@ -613,20 +613,12 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-1t-num')\n",
     "y_test_pred = model.predict(X_test, batch_size=8192)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
