--- a/notebooks/amazon-walmart-base-2-allsim.ipynb
+++ b/notebooks/amazon-walmart-base-2-allsim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T19:27:23.665689Z",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:41:12.001384Z",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:41:28.691606Z",
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -844,10 +844,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.91      0.82      0.87       114\n",
+      "          0    0.99827   0.99922   0.99874     11541\n",
+      "          1    0.91262   0.82456   0.86636       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99743   0.99751   0.99745     11655\n",
       "\n",
       "[[11532     9]\n",
       " [   20    94]]\n"
@@ -855,9 +855,10 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-2-allsim')\n",
     "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
