--- a/notebooks/amazon-walmart-base-2-num.ipynb
+++ b/notebooks/amazon-walmart-base-2-num.ipynb
@@ -785,11 +785,55 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-2-num')\n",
     "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-12T21:51:26.898830Z",
+     "start_time": "2018-04-12T21:51:23.802014Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0    0.99879   0.99913   0.99896     11541\n",
+      "          1    0.90909   0.87719   0.89286       114\n",
+      "\n",
+      "avg / total    0.99791   0.99794   0.99792     11655\n",
+      "\n",
+      "[[11531    10]\n",
+      " [   14   100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-2-num')\n",
+    "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
+    "y_test_ = data['test_y'].values.squeeze()\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
+    "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
