--- a/notebooks/amazon-walmart-base-allcomp.ipynb
+++ b/notebooks/amazon-walmart-base-allcomp.ipynb
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:51:26.898830Z",
@@ -811,10 +811,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.88      0.83      0.86       114\n",
+      "          0    0.99835   0.99887   0.99861     11541\n",
+      "          1    0.87963   0.83333   0.85586       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99719   0.99725   0.99722     11655\n",
       "\n",
       "[[11528    13]\n",
       " [   19    95]]\n"
@@ -822,9 +822,10 @@
     }
    ],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-allcomp')\n",
     "y_test_pred = model.predict(X_test, batch_size=4096)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()\n",
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
