--- a/notebooks/amazon-walmart-base-idf.ipynb
+++ b/notebooks/amazon-walmart-base-idf.ipynb
@@ -14,6 +14,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/paperspace/anaconda3/envs/python-36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:55:39.477334Z",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T21:56:06.371188Z",
@@ -110,9 +112,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /Users/derekzhao/anaconda3/envs/entity-resolution/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3148: calling l2_normalize (from tensorflow.python.ops.nn_impl) with dim is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "dim is deprecated, use axis instead\n",
       "Number of inputs to dense layer: 6\n"
      ]
     }
@@ -796,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T22:04:36.094143Z",
@@ -806,13 +805,14 @@
    },
    "outputs": [],
    "source": [
+    "model.load_weights('../data/models/amazon-walmart-base-idf')\n",
     "y_test_pred = model.predict(X_test)[:,1]\n",
     "y_test_ = data['test_y'].values.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-12T22:04:37.057900Z",
@@ -826,10 +826,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00     11541\n",
-      "          1       0.94      0.72      0.82       114\n",
+      "          0    0.99723   0.99957   0.99840     11541\n",
+      "          1    0.94253   0.71930   0.81592       114\n",
       "\n",
-      "avg / total       1.00      1.00      1.00     11655\n",
+      "avg / total    0.99670   0.99683   0.99661     11655\n",
       "\n",
       "[[11536     5]\n",
       " [   32    82]]\n"
@@ -837,7 +837,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test_, y_test_pred >= 0.5))\n",
+    "print(classification_report(y_test_, y_test_pred >= 0.5, digits=5))\n",
     "print(confusion_matrix(y_test_, y_test_pred >= 0.5))"
    ]
   },
@@ -853,9 +853,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "entity-resolution",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "entity-resolution"
+   "name": "python-36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -867,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   },
   "varInspector": {
    "cols": {
